kube/core/traefik-routes/argocd.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-acme-issuer
spec:
  gatewayClassName: traefik
  listeners:
    - name: websecure
      protocol: HTTPS
      hostname: "argocd.kube.metalnet.org"
      port: 8443
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        mode: Terminate
        certificateRefs:
          - name: argocd-kube-metalnet-org-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-http-route
  namespace: argocd
  annotations:
    gethomepage.dev/href: "https://argocd.kube.metalnet.org"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/name: ArgoCD 
    gethomepage.dev/app: argocd-server
    uptime-kuma.io/monitor: "true"
spec:
  parentRefs:
    - name: argocd-gateway
      namespace: argocd
      sectionName: websecure
  hostnames:
    - "argocd.kube.metalnet.org"
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
          kind: Service
          group: ""
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: argocd--grpc-route
  namespace: argocd
spec:
  parentRefs:
    - name: argocd-gateway
      namespace: argocd
      sectionName: websecure
  hostnames:
    - "argocd.kube.metalnet.org"
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
          kind: Service
          group: ""
      matches:
        - headers:
            - name: Content-Type
              type: RegularExpression
              value: "^application/grpc.*$"
