kube/core/traefik-routes/ipmi.yaml
apiVersion: v1
kind: Service
metadata:
  name: ipmi-service
  namespace: traefik
spec:
  type: ExternalName
  externalName: ipmi.metalnet.org
  ports:
    - name: https
      port: 443
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ipmi-route
  namespace: traefik
  annotations:
    gethomepage.dev/href: "https://ipmi.kube.metalnet.org"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/name: Intelligent Platform Management Interface
    gethomepage.dev/external: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ipmi.kube.metalnet.org`)
      kind: Rule
      services:
        - name: ipmi-service
          port: 443
          serversTransport: ipmi-tls-transport
  tls:
    secretName: ipmi-kube-metalnet-org-tls
