kube/core/traefik-routes/pbs.yaml
apiVersion: v1
kind: Service
metadata:
  name: pbs-service
  namespace: traefik
spec:
  type: ExternalName
  externalName: pve.metalnet.org
  ports:
    - name: https
      port: 8007
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pbs-route
  namespace: traefik
  annotations:
    gethomepage.dev/href: "https://pbs.kube.metalnet.org"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/name: Proxmox Backup Server
    gethomepage.dev/external: "true"
    uptime-kuma.io/monitor: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pbs.kube.metalnet.org`)
      kind: Rule
      services:
        - name: pbs-service
          port: 8007
          serversTransport: pbs-tls-transport
  tls:
    secretName: pbs-kube-metalnet-org-tls
