kube/core/traefik-routes/pve.yaml
apiVersion: v1
kind: Service
metadata:
  name: pve-service
  namespace: traefik
spec:
  type: ExternalName
  externalName: opnsense.metalnet.org
  ports:
    - name: https
      port: 8006
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: proxmox-route
  namespace: traefik
  annotations:
    gethomepage.dev/href: "https://proxmox.kube.metalnet.org"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/name: Proxmox Virtual Environment
    gethomepage.dev/external: "true"
    uptime-kuma.io/monitor: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`proxmox.kube.metalnet.org`)
      kind: Rule
      services:
        - name: pve-service
          port: 8006
  tls:
    secretName: proxmox-kube-metalnet-org-tls
