kube/core/traefik-routes/traefik.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-gateway
  namespace: traefik
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-acme-issuer
spec:
  gatewayClassName: traefik
  listeners:
    - name: websecure
      protocol: HTTPS
      hostname: "traefik.kube.metalnet.org"
      port: 8443
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        mode: Terminate
        certificateRefs:
          - name: traefik-kube-metalnet-org-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-http-route
  namespace: traefik
  annotations:
    gethomepage.dev/href: "https://traefik.kube.metalnet.org"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/name: Traefik
    gethomepage.dev/app: traefik
    uptime-kuma.io/monitor: "true"
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure
  hostnames:
    - "traefik.kube.metalnet.org"
  rules:
    - matches:
        - path:
            type: Exact
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplaceFullPath
              replaceFullPath: /dashboard/
            statusCode: 302
    - matches:
        - path:
            type: PathPrefix
            value: /api/
        - path:
            type: PathPrefix
            value: /dashboard/
      backendRefs:
        - name: api@internal
          port: 8080
          kind: TraefikService
          group: traefik.io
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-minecraft
  namespace: traefik
  annotations:
    metallb.io/loadBalancerIPs: 192.168.10.70
    metallb.io/allow-shared-ip: "traefik"
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-traefik
  ports:
    - name: minecraft-tcp
      port: 25565
      targetPort: minecraft-tcp
      protocol: TCP
