kube/core/traefik-routes/unifi.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-webui-service
  namespace: traefik
spec:
  type: ExternalName
  externalName: unifi.metalnet.org
  ports:
    - name: https
      port: 443
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: unifi-route
  namespace: traefik
  annotations:
    gethomepage.dev/href: "https://unifi.kube.metalnet.org"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/name: UniFi Network Application
    gethomepage.dev/app: unifi-os-server
    uptime-kuma.io/monitor: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`unifi.kube.metalnet.org`)
      kind: Rule
      services:
        - name: unifi-webui-service
          port: 443
          serversTransport: unifi-tls-transport
  tls:
    secretName: unifi-kube-metalnet-org-tls
